# epa-syllabicate

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  release.yml
epa_syllabicate/: __init__.py  lark_syllabicator.py  syllabicate.py  syllabicator.py
tests/: __init__.py  test_syllabicate.py
