[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "epa_syllabicate"
version = "0.1.0"
description = "Módulo para silabificación de palabras"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "EPA Team" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.urls]
"Homepage" = ""
"Bug Tracker" = ""

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ipdb",
    "black",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"] 